tests/baselines/reference/unknownSymbols2.errors.txt
==== tests/cases/compiler/unknownSymbols2.ts (11 errors) ====
    module M {
        var x: asdf;
               ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
        var y = x + asdf;
                    ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
        var z = <asdf>x; // should be an error
                 ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
        if (asdf) {
            ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
        }
        else if (qwerty) {
                 ~~~~~~
!!! error TS2095: Could not find symbol 'qwerty'.
        }
    
        try {
        }
        catch (asdf) { // no error
        }
    
        switch (asdf) {
                ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
            case qwerty:
                 ~~~~~~
!!! error TS2095: Could not find symbol 'qwerty'.
                break;
            default:
                break;
        }
    
        var a = () => asdf;
                      ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
        var b = (asdf) => { return qwerty };
                                   ~~~~~~
!!! error TS2095: Could not find symbol 'qwerty'.
    
        module N {
            var x = 1;
        }
        import c = N;
        import d = asdf;
        ~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
                   ~~~~
!!! error TS2179: Unable to resolve module reference 'asdf'.
    }